tests/neg-custom-args/captures/lazylist.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylist.scala:17:15 -------------------------------------
17 |  def tail = xs() // error
   |             ^^^^
   |             Found:    lazylists.LazyList[T]^{LazyCons.this.xs}
   |             Required: lazylists.LazyList[T]
   |
   |             Note that capability `LazyCons.this.xs` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylist.scala:35:29 -------------------------------------
35 |  val ref1c: LazyList[Int] = ref1 // error
   |                             ^^^^
   |               Found:    (ref1 : lazylists.LazyCons[Int]{val xs: () ->{cap1} lazylists.LazyList[Int]^{}}^{cap1})
   |               Required: lazylists.LazyList[Int]
   |
   |               Note that capability `cap1` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylist.scala:37:36 -------------------------------------
37 |  val ref2c: LazyList[Int]^{ref1} = ref2 // error
   |                                    ^^^^
   |                                    Found:    (ref2 : lazylists.LazyList[Int]^{cap2, ref1})
   |                                    Required: lazylists.LazyList[Int]^{ref1}
   |
   |                                    Note that capability `cap2` is not included in capture set {ref1}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylist.scala:39:36 -------------------------------------
39 |  val ref3c: LazyList[Int]^{cap2} = ref3 // error
   |                                    ^^^^
   |                                    Found:    (ref3 : lazylists.LazyList[Int]^{cap2, ref1})
   |                                    Required: lazylists.LazyList[Int]^{cap2}
   |
   |                                    Note that capability `ref1` is not included in capture set {cap2}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylist.scala:41:42 -------------------------------------
41 |  val ref4c: LazyList[Int]^{cap1, ref3} = ref4 // error
   |                                          ^^^^
   |                                        Found:    (ref4 : lazylists.LazyList[Int]^{cap3, cap1, cap2})
   |                                        Required: lazylists.LazyList[Int]^{cap1, ref3}
   |
   |                                        Note that capability `cap3` is not included in capture set {cap1, ref3}.
   |
   | longer explanation available when compiling with `-explain`
-- [E164] Declaration Error: tests/neg-custom-args/captures/lazylist.scala:22:6 ----------------------------------------
22 |  def tail: LazyList[Nothing]^ = ???  // error overriding
   |      ^
   |      error overriding method tail in class LazyList of type -> lazylists.LazyList[Nothing];
   |        method tail of type -> lazylists.LazyList[Nothing]^{fresh} has incompatible type
   |
   |      where:    fresh is a root capability associated with the result type of -> lazylists.LazyList[Nothing]^
   |
   | longer explanation available when compiling with `-explain`
